Added save screen to bmp feature
Added Solarized Dark & Light Gui Style

Added ZRCP commands:
-save-screen: to save machine screen to file

Improved menu:
-Allow some windows to be put on the background. Also active windows are saved and restored on startup
-Pressing the menu key (F5 by default) when menu is open, it will send you back to the main menu. Also pressing over Z logo on ext desktop

Improved Esxdos handler: 
-add f_mkdir function 
-add configuration setting to save local work directory

Improved ZRCP:
-Allow to write commands between "". Not all commands support this
-Added save-binary command

Improved TBBlue emulation:
-Enable Timex video by default
-Added altrom feature: now 48k and 128k mode works again
-Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment
-Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
-Allow to download a 512 MB TBBlue SD official card (allowed download sizes: 32MB, 128MB, 512MB, 2 GB)

Improved debugging:
-Added breakpoint action "reset-tstatp"
-Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages

Improved Chloe emulation: 
-Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
-Load unodos3.rom as the default divmmc firmware
-Added chloehd.mmc in the extras package




Fixed ZRCP bugs:
-Fix possible crash when disconnecting socket

Fixed rom loading: no more cpu panic when the rom is not found 

Fixed Esxdos handler: 
-fixed segfaults when using a file handler that was a directory

Fixed SCF/CCF undocumented flags emulation. Not enabled by default on compilation because almost no one is using this

Fixed saving "Show CPU usage" setting on footer



Version 8.1.1 - The Great Escape edition. 2 March 2020

Fixed starting the emulator on some Mac OS versions


Version 8.1 - The Great Escape edition. 25 February 2020


Added ZEsarUX Network Gaming protocol (ZENG), which allows you to play to any emulated game, using two ZEsarUX instances, 