@@ -262,8 +262,7 @@ valores long int
 
 -Immediatos:
 
--Opción para mostrar o no la temperatura de cpu. 
-Solo visible opción menú en Linux. En command line para todos. Pero que diga que solo sirve en Linux 
+
 
 -Soporte ulaplus en Next
 
