@@ -23965,6 +23965,14 @@ void menu_interface_show_cpu_usage(MENU_ITEM_PARAMETERS)
 	if (!screen_show_cpu_usage.v) menu_init_footer();
 }
 
+
+void menu_interface_show_cpu_temp(MENU_ITEM_PARAMETERS)
+{
+	screen_show_cpu_temp.v ^=1;
+	clear_putpixel_cache();
+	if (!screen_show_cpu_temp.v) menu_init_footer();
+}
+
 void menu_interface_real_1648_palette(MENU_ITEM_PARAMETERS)
 {
 	spectrum_1648_use_real_palette.v ^=1;
@@ -24219,6 +24227,17 @@ void menu_window_settings(MENU_ITEM_PARAMETERS)
 		menu_add_item_menu_tooltip(array_menu_window_settings,"Show CPU usage on footer");
 		menu_add_item_menu_ayuda(array_menu_window_settings,"It tells you how much host cpu machine is using ZEsarUX. So it's better to have it low. "
 														"Higher values mean you need a faster host machine to use ZEsarUX");
+		}
+#endif
+
+		//temperatura cpu solo se ve en Linux
+#ifdef __linux__
+		if (menu_footer) {
+		menu_add_item_menu_format(array_menu_window_settings,MENU_OPCION_NORMAL,menu_interface_show_cpu_temp,NULL,"[%c] Show CPU temperature",(screen_show_cpu_temp.v ? 'X' : ' ') );
+		//menu_add_item_menu_shortcut(array_menu_window_settings,'c');
+		menu_add_item_menu_tooltip(array_menu_window_settings,"Show CPU temperature on footer");
+		menu_add_item_menu_ayuda(array_menu_window_settings,"It tells the temperature of the main CPU");
+												
 		}
 #endif
 
